commit-11: Added put request
