# routes/feedRoutes.js
@@ -21,4 +21,14 @@ router.post(
 //GET /feed/post/{postId}
 router.get("/post/:postId", feedController.getPost);
 
+//PUT /feed/post/{postId}
+router.put(
+  "/post/:postId",
+  [
+    body("title").trim().isLength({ min: 5 }),
+    body("content").trim().isLength({ min: 5 }),
+  ],
+  feedController.updatePost
+);
+
 module.exports = router;
